# overture-mcp-server

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  pyproject.toml  railway.toml
docs/: DATA_MODEL.md  DEPLOYMENT.md  OPERATIONS.md  TESTING.md  TOOLS.md
src/overture_mcp/: __init__.py  __main__.py  auth.py  bbox.py  config.py  db.py  registry.py  response.py  server.py  stac.py  validation.py
tests/: conftest.py
tests/compatibility/: test_mode_parity.py
tests/e2e/: test_advertising_competitor.py  test_customer_segmentation.py  test_insurance_risk.py  test_multi_location_analysis.py  test_multi_mcp_workflow.py  test_retail_site_selection.py
tests/edge/: test_boundary_values.py  test_empty_results.py  test_invalid_inputs.py  test_null_handling.py
tests/fixtures/: generate_fixtures.py  sample_buildings.parquet  sample_divisions.parquet  sample_land_use.parquet  sample_places.parquet  sample_roads.parquet
tests/integration/: test_auth.py  test_db_connection.py  test_duckdb_buildings.py  test_duckdb_divisions.py  test_duckdb_land_use.py  test_duckdb_places.py  test_duckdb_transportation.py  test_server_direct.py  test_server_progressive.py
tests/performance/: test_concurrency.py  test_latency_baselines.py  test_memory.py
tests/security/: test_auth_bypass.py  test_parameter_tampering.py  test_sql_injection.py
tests/unit/: test_bbox.py  test_config.py  test_query_builders_buildings.py  test_query_builders_divisions.py  test_query_builders_land_use.py  test_query_builders_places.py  test_registry.py  test_response.py  (+4 more)
(+12 files in other folders)
