[project]
name = "overture-mcp-server"
version = "0.1.0"
description = "MCP server exposing Overture Maps spatial analytics tools for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.0",
    "duckdb>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.2",
    "pytest-benchmark>=4.0",
    "psutil>=5.9",
    "jsonschema>=4.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/overture_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 30
markers = [
    "s3: tests that require S3 network access (deselect with '-m not s3')",
    "slow: tests that take >10 seconds",
]
